# JobNexus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  config.py  dependencies.py  main.py  pyproject.toml
backend/models/: job.py
backend/services/: apec.py  cache.py  data.py  labonnealternance.py  orchestrator.py  rome.py  wttj.py
backend/tests/: conftest.py  test_orchestrator.py
docs/: architecture.drawio
frontend/: .dockerignore  Dockerfile  app.py  cloudbuild.yaml  pyproject.toml
models/: job.py  rome_code.py
services/: apec.py  cache.py  data.py  labonnealternance.py  orchestrator.py  rome.py  wttj.py
terraform/: build.tf  compute.tf  data.tf  iam.tf  main.tf  network.tf  openapi-jobnexus.json  provider.tf  secrets.tf  variables.tf
terraform/schemas/: job_table.json
