[project]
name = "jobnexus"
version = "0.1.0"
description = ""
authors = [
    {name = "LoicCK",email = "loic.chauveau.kson@proton.me"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "requests (>=2.32.5,<3.0.0)",
    "google-cloud-firestore (>=2.21.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)"
]