[project]
name = "jobnexus-frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "LoicCK",email = "loic.chauveau.kson@proton.me"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.53.1,<2.0.0)",
    "pandas (<3.0.0)",
    "google-cloud-bigquery (>=3.40.0,<4.0.0)",
    "db-dtypes (>=1.5.0,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "google-cloud-bigquery-storage (>=2.36.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pandas-stubs (>=2.3.3.260113,<3.0.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py314']

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
